Tue Dec 18 12:15:59 2012  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems/specification.rb:  Fixed ruby output of requirements
	  with multiple version specifiers.
	* test/rubygems/test_gem_ext_cmake_builder.rb:  Only look for specific
	  lines in cmake output.  Should fix [ruby-trunk - Bug #7579]

Tue Dec 18 11:45:26 2012  Eric Hodel  <drbrain@segment7.net>

	* doc/syntax/literals.rdoc:  Added 0o octal integers.

Tue Dec 18 12:28:52 2012  Martin Bosslet  <Martin.Bosslet@gmail.com>

	* test/openssl/test_ssl.rb: Use :TLSv1_2_client explicitly in
	  test_tls_v1_2 to prevent upstream bug.
	  [Bug #7197] [ruby-dev:46240]

Tue Dec 18 11:52:34 2012  Martin Bosslet  <Martin.Bosslet@gmail.com>

	* ext/openssl/lib/ssl.rb: Enable insertion of empty fragments as a
	  countermeasure for the BEAST attack by default. The default options
	  of OpenSSL::SSL:SSLContext are now:
	  OpenSSL::SSL::OP_ALL & ~OpenSSL::SSL::OP_DONT_INSERT_EMPTY_FRAGMENTS
	  [Bug #5353] [ruby-core:39673]

	* test/openssl/test_ssl.rb: Adapt tests to new SSLContext default.

	* NEWS: Announce the new default.

Tue Dec 18 06:36:12 2012  Koichi Sasada  <ko1@atdot.net>

	* method.h: remove `VM_METHOD_TYPE_CFUNC_FRAMELESS' method type.
	  This method type is for optimized CFUNC such as Fixnum#+ and so on.
	  This feature is half-baked and no way to use them.
	  [Background]
	  Now, VM has opt_plus instructions to optimize `+' methods for
	  some Classes (such as Fixnum, Float (flonum)). We call this
	  type of instructions as `specialized instructions'.
	  This simple technique improve simple program dramatically.
	  However, we can make specialized instructions for only several
	  types (classes) and selectors (method names) because a large
	  instruction will be slow. In other words, this technique has no
	  extensibility.
	  To overcome this problem, VM_METHOD_TYPE_CFUNC_FRAMELESS was
	  introduced (r37198). This type is a variant of CFUNC, but called